Added test cases and custom crawler code